k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echo
  labels:
    name: echo
    app.kubernetes.io/name: echo
    app.kubernetes.io/version: v1
    app.kubernetes.io/component: namespace
  annotations:
    description: 'Echo real-time translation application namespace'
